# log4x

./: .gitignore  CMakeLists.txt  Makefile  README.md  android.toolchain.cmake  log4x.cpp  log4x.h  log4z.cpp  log4z.h  main.cpp
src/: CMakeLists.txt  file.h  log4x.cpp  log4x.h  semaphore.cpp  semaphore.h  stream.h  thread.cpp  thread.h
test/: CMakeLists.txt  main.cpp
vs2013/: log4x.sln  log4x.vcxproj  log4x.vcxproj.filters
